# Stevens

./: Alex-Stevens.xlsx  README.md
Courses/Stevens_Fall_2020/E-231/: Capstone Data.txt  Tensile Strength.xlsx
Courses/Stevens_Fall_2021/CPE-490/: CPE-490.rtf
Courses/Stevens_Fall_2021/E-243/: dgfhdfghfgFemaleHeightsRegression.xlsx
Courses/Stevens_Fall_2021/EE-471/: EE-471.rtf
Courses/Stevens_Fall_2021/HST-401/: HST-401.rtf
Courses/Stevens_Fall_2021/Summer_2022_Resume/: Gaskins_Resume_2022.docx
Courses/Stevens_Fall_2022/EE553/Homework/HW4/: .gitignore  CMakeLists.txt  README.md  main.cpp
E-243/: E-243.rtf
E-344/: E-344.rtf
EE-471/Tests/: EE471_Exam_1.docx
Prep/: Chem II Lab Midterm.txt
Resume/2024/: Alexander_Gaskins_Resume.docx
Resume/2025/: Alexander Gaskins Resume.docx
Stevens_Fall_2020/E-231/: 20f.E231.TensionSpecimen_2.cap
Stevens_Fall_2021/E-321/: E-321.rtf
Stevens_Fall_2021/Summer_2022_Resume/: Gaskins_Resume_2022.docx  Resume.rtf
Stevens_Spring_2022/: Fitness.md  StevensNet.txt  Zisc.dmg
Stevens_Spring_2022/CPE-322-A/: CPE-322.txt  Group8-Info.rtf  README.md
Stevens_Spring_2022/CPE-345-A/: CPE-345.txt
Stevens_Spring_2022/CPE-462-A/: ImageProcessing.txt  image.cc
Stevens_Spring_2022/E-355-D/: E-355.txt  Lecture5.xlsx
Stevens_Spring_2022/HST-411-A/: HST-411.txt
Stevens_Spring_2022/IDE-400/: IDE-400.txt
Stevens_Spring_2022/PE-188/: OpenFitnessLink[Mac].webloc
Stevens_Spring_2022/Resume/: Gaskins_Resume_2022.docx
Summer_2022_Resume/: Gaskins_Resume_2022.docx
TI-84 Plus CE/: Chem II Exam 2.txt  astro.8xv
(+570 files in other folders)
